# DIS_EVL

./: .gitignore  README.md  Vagrantfile  addPackages.py  anomaly_detection_results.csv  convertyaml.py  cuda-toolkit  environment.yml  explicit.txt  pyproject.toml  requirements.txt  vagrantInstruction.md
UA_JITC_results_unit_test/: threshold_metrics_summary.csv
dis_model/: fridgeSim.py  garageSim.py  gpsSim.py  lightSim.py  modbusSim.py  thermostatSim.py  weatherSim.py
docker/: Makefile  docker-env-evl-dis.yml  env.sh
evl_streaming_src/: ML_online_app.py  MclassKafka.py  StreamMClassification.py  application_stream_threshold.csv  autoencoder_train.py  checkEVL.py  classifier_performance.py  core.py  demoJITC.py  df_train_sel_feat_application.csv  graph.ipynb  grapher.py  h_bau_online.py  kafka_preprocessed_data_collection_app.py  mclassification.py  newNGram.py  ngram_demo.py  offline_ae_new.py  offline_autoencoder.py  offline_autoencoder_mlflow.py  offline_autoencoder_unit_test.py  online_learning.py  performance_result_no_ts.py  performance_results.py  results.ipynb  results.py  run_experiment.py  scargc.py  vanilla.py
models/: knn_kmeans_fridge_.h5  knn_kmeans_fridge_.pkl  ton_iot_datagen.py
ontology/: all_capec_ontology.owl  capec_ontology.owl
spark_streaming_src/: MClassStream.py
src/: MClassStream.py  featureExtraction.py  saveCassandra.py  saveMySQL.py  spark-run.sh
streaming_src/: streamDISEVL.py
tcis_master_attack_src/: README.md  core.py  doc.py  feature_extraction_enhencement.py  kafka_preprocessed_data_collection_app.py  train.py
(+20663 files in other folders)
