[tool.poetry]
name = "dis-evl"
version = "0.1.0"
description = ""
authors = ["martinmanuel9 <martinmlopez@arizona.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
